# mood-diary

./: .flake8  .gitignore  LICENSE  README.md  auth_token.json  mood.db  pyproject.toml  start.sh  test.db
.github/workflows/: ci.yml
backend/app/: auth_utils.py  database.py  fake_data.py  logger.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  mood.py  stats.py
frontend/: app.py
mutants/: mood.db  mutmut-stats.json  pyproject.toml  setup.cfg  test.db
mutants/backend/app/: auth_utils.py  database.py  main.py  models.py  schemas.py
mutants/backend/app/routes/: __init__.py  auth.py  mood.py  stats.py
mutants/tests/: conftest.py  perf_test_locust.py  test_mood.py  test_stats.py  test_ui_streamlit.py
reports/: bandit-security-report.txt  coverage-report.txt  mutation-report.txt  performance-test-output.txt
tests/: conftest.py  perf_test_locust.py  test_auth.py  test_auth_invalid.py  test_database.py  test_fuzzing.py  test_main.py  test_mood.py  test_stats.py  test_ui_streamlit.py  tests_utils.py
