[tool.poetry]
name = "mood-diary"
version = "0.1.0"
description = "Mood tracking app using FastAPI and Streamlit"
authors = ["Mohammad Jaafar <m.jaafar@innopolis.university>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.45.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.20"
lark = "^1.2.2"
bcrypt = ">=4.0.1"
python-dotenv = "^1.1.0"
bandit = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.0"
flake8 = "^7.0.0"
bandit = "^1.7.6"
ruff = "^0.4.0"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
selenium = "^4.31.0"
locust = "^2.36.2"
mutmut = "^3.2.3"
hypothesis = "^6.131.9"

[tool.bandit]
exclude_dirs = ["./.venv", "./tests"]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "uvicorn backend.app.main:app --reload"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead."
]

[tool.ruff]
exclude = [
    "./mutants",
    ".venv",
    ".mutmut-cache",
    "__pycache__",
    "migrations",
    "tests/perf_test_locust.py"  # optional if noisy
]

[tool.flake8]
exclude = [
    "mutants",
    ".venv",
    ".mutmut-cache",
    "__pycache__",
    "migrations",
]

[tool.mutmut]
paths_to_mutate = ["backend/app"]
runner = "pytest"
exclude = ["backend/app/main.py"]

